# simple_linux_project

./: Makefile.am  README.md  calc.h  configure.ac
src/: difference.c  division.c  factorial.c  main.c  product.c  sum.c
src/.deps/: difference.Po  division.Po  factorial.Po  main.Po  product.Po  square_root.Po  sum.Po
